.jjconflict-side-0/apps/synapse/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: synapse
      app.kubernetes.io/name: synapse
  serviceName: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: synapse
        app.kubernetes.io/name: synapse
    spec:
      containers:
        - name: synapse
          image: synapse
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            capabilities:
              add:
                - SETUID
                - SETGID
      securityContext:
        fsGroup: 991
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-data
        - name: rclone-config
          configMap:
            name: synapse-rclone
        - name: startup-config
          secret:
            secretName: synapse
        - name: appservices-startup-config
          projected:
            sources:
              - secret:
                  name: mautrix-discord
                  items:
                    - key: registration.yaml
                      path: matrix-discord.yaml
                    - key: doublepuppet.yaml
                      path: matrix-discord-doublepuppet.yaml
              - secret:
                  name: mautrix-googlechat
                  items:
                    - key: registration.yaml
                      path: matrix-googlechat.yaml
                    - key: doublepuppet.yaml
                      path: matrix-googlechat-doublepuppet.yaml
              - secret:
                  name: mautrix-linkedin
                  items:
                    - key: registration.yaml
                      path: matrix-linkedin.yaml
                    - key: doublepuppet.yaml
                      path: matrix-linkedin-doublepuppet.yaml
              - secret:
                  name: mautrix-meta
                  items:
                    - key: registration.yaml
                      path: matrix-meta.yaml
                    - key: doublepuppet.yaml
                      path: matrix-meta-doublepuppet.yaml
              - secret:
                  name: mautrix-signal
                  items:
                    - key: registration.yaml
                      path: matrix-signal.yaml
                    - key: doublepuppet.yaml
                      path: matrix-signal-doublepuppet.yaml
              - secret:
                  name: mautrix-slack
                  items:
                    - key: registration.yaml
                      path: matrix-slack.yaml
                    - key: doublepuppet.yaml
                      path: matrix-slack-doublepuppet.yaml
              - secret:
                  name: mautrix-twitter
                  items:
                    - key: registration.yaml
                      path: matrix-twitter.yaml
                    - key: doublepuppet.yaml
                      path: matrix-twitter-doublepuppet.yaml
              - secret:
                  name: mautrix-whatsapp
                  items:
                    - key: registration.yaml
                      path: matrix-whatsapp.yaml
                    - key: doublepuppet.yaml
                      path: matrix-whatsapp-doublepuppet.yaml
